Fix horizontal overflow for SampleCode component (#501)

--- a/website2/src/app/docs/[slug]/styles.module.css
+++ b/website2/src/app/docs/[slug]/styles.module.css
@@ -7,6 +7,10 @@
   border-right: 16px solid var(--color-black);
 }
 
+.document {
+  min-width: 0;
+}
+
 @media only screen and (max-width: 768px) {
   .layout {
     display: block;
